tests/ui/parser/using_operator_shift.sol
// Solc test: test/libsolidity/syntaxTests/operators/userDefined/operator_parsing_non_user_definable.sol.

using {f as <<} for uint256; //~ ERROR: expected
